<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.lenovo.MainActivity"
    >
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/logo2"
        tools:ignore="RtlCompat" />


    <TextView

        android:layout_width="fill_parent"
        android:layout_height="29dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:text="@string/user_name"
        android:visibility="visible"
        tools:ignore="RtlCompat" />

    <EditText
        android:id="@+id/user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="35dp"
        android:inputType=""
        android:maxLength="8"
        android:singleLine="true"
        tools:ignore="LabelFor,RtlCompat" />

    <TextView

        android:layout_width="fill_parent"
        android:layout_height="25dp"
        android:layout_alignParentStart="true"

        android:layout_alignParentTop="true"
        android:gravity="center"
        android:layout_marginTop="94dp"
        android:text="@string/pass_word"
        android:visibility="visible"
        tools:ignore="RtlCompat" />

    <EditText
        android:id="@+id/pass_word"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="139dp"
        android:inputType=""
        android:singleLine="true"
        android:maxLength="8"
        tools:ignore="LabelFor,RtlCompat" />

    <Button
        android:id="@+id/B2"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="123dp"
        android:gravity="center"
        android:text="@string/signe_in"
        tools:ignore="RtlCompat" />

    <Button
        android:id="@+id/button2"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="67dp"
        android:gravity="center"
        android:text="@string/cancel" />

</RelativeLayout>